Impl of symmetric hash join. Still to be tested

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,22 @@
                     <!-- Join consumer -->
                     <execution>
                         <id>join-consumer</id>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <archive>
+                                <manifest>
+                                    <mainClass>ch.ethz.sjoin.PJoin</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <finalName>pjoin-${project.version}</finalName>
+                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
